# sobits_msgs

./: CHANGELOG.rst  CMakeLists.txt  README.en.md  README.md  package.xml
msg/: BoundingBox.msg  CurrentStateArray.msg  MotorState.msg  ObjectPose.msg  ObjectPoseArray.msg  current_state.msg
