<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sobits_msgs</name>
  <version>0.0.0</version>
  <description>
    Common custom ROS msgs for SOBITS robots.
  </description>
  <maintainer email="kvalentincardenas@gmail.com">Keith Valentin</maintainer>

  <license>BSD</license>

  <url type="website">https://home.soka.ac.jp/~choi/index.html</url>
  <url type="repository">https://github.com/TeamSOBITS/sobits_msgs</url>
  <url type="bugtracker">https://github.com/TeamSOBITS/sobits_msgs/issues</url>
  <author email="choi.7f@gmail.com">Team SOBITS</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
